fixed elements alignment

--- a/Poltrona Verde/styles.css
+++ b/Poltrona Verde/styles.css
@@ -19,6 +19,11 @@ body {
 }
 
 nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3;
     background-color: rgb(77, 110, 81);
     font-family: "Poppins Light";
     height: auto;
@@ -31,14 +36,22 @@ nav {
 }
 
 #logo {
-    height: 3rem;
+    height: 2.8rem;
     width: 18vw;
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
+    margin-left: 2em;
+    
 }
 
 #logo img {
-    width: 100%;
     object-fit: contain;
-    margin-top:2px;
+    filter: brightness(1.5);
+}
+
+#pittogramma{
+    width: 30%;
 }
 
 nav ul {
@@ -61,6 +74,12 @@ nav li{
    cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+
 @keyframes expandLine {
     0% {
         width: 0%;
@@ -70,7 +89,7 @@ nav li{
     }
 }
 
-nav li::after {
+nav .li::after {
     content: "";
     height: 2px;
     width:0%;
@@ -80,7 +99,7 @@ nav li::after {
     left: 0;
 }
 
-nav li:hover::after {
+nav .li:hover::after {
     
     transition: 0.5s ease;
     width: 100%;
@@ -95,16 +114,46 @@ nav li:hover::after {
     }
 }
 
+@keyframes slideRight {
+    0% {
+        transform: translateX(-10%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 100;
+        transform: translateY(0);
+    }
+}
+
+
 main {
     font-family: "Playfair Display";
 }
 
-main, nav {
-    animation: 0.9s ease-in fadeIn;
+main {
+    animation: 0.8s ease-in fadeIn;
 }
 
+nav {
+    animation: 0.8s ease-in slideDown;
+}
+
+#img-container h1 {
+    animation: slideRight 0.8s ease-in;
+}
+
+
 #img-container {
-    height: 90vh;
+    height: 100vh;
     margin: 0;
     z-index: 1;
     position: relative;
@@ -197,9 +246,11 @@ img {
    width: 20vw;
    height: 25vw;
    position: relative;
+   display: flex;
+   flex-direction: column;
 }
 
-.img-container::after {
+#img-line::after {
     content: "";
     width: 1px;
     background-color: rgb(150, 137, 137);
@@ -209,6 +260,21 @@ img {
     top: 12%;
  }
 
+.cart-btn {
+    padding: 5px 10px;
+    font-size: 0.7em;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    background-color: rgb(138, 115, 116);
+    margin: 1em auto;
+    font-family: "Poppins";
+    cursor: pointer;
+}
+
+.cart-btn i {
+    padding: 0 5px;
+}
 
 
 #bestsellers .img {
@@ -464,9 +530,22 @@ h4::after{
 }
 
 #materiali-main-img {
-    height: 80vh;
+    height: 40vw;
     position: relative;
     z-index: 1;
+}
+
+#materiali-main-img h2 {
+    animation: 0.8s ease-in slideRight;
+    position: absolute;
+    font-size: 3.5vw;
+    color: white;
+    font-weight: 200;
+    letter-spacing: 1px;
+    top: 10%;
+    left: 5%;
+    z-index: 2;
+    width: 80%;
 }
 
 
@@ -476,42 +555,43 @@ h4::after{
     height: auto;
     width: 50%;
     position: absolute;
-    bottom: -20%;
+    bottom: -10%;
     gap: 1em;
     right: 8%;
     z-index:3;
+    
 }
 
 .materiali-info {
-    background-color: rgba(187, 159, 159, 0.9);
+    background-color: rgba(187, 159, 159, 0.7);
     padding-bottom: 1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 35%;
+    padding: 5px;
 }
 
-.materiali-info p {
-    font-size: 1vw;
-    margin: 0 2em ;
+.materiali-info p, .materiali-info h3   {
+    font-size: 0.9vw;
+    margin: 1em 2em ;
     text-align: center;
+    font-family: "Poppins";
 }
 
 .materiali-info-img {
-    width: 33%;
-    margin: 2em auto;
+    width: 23%;
+    margin: auto;
 }
 
 .materiali-info img{
     width: 100%;
-    height: 100%;
+    height:  100%;
     margin: 0;
+    object-fit: fill;
 }
 
 
 #community-img-container {
     height: 60vw;
-    margin: auto;
+    margin: 5em ;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -519,17 +599,20 @@ h4::after{
 
 }
 
-#community-img-container  .img {
+#community-img-container .img {
     width: 30vw;
+    height: 60%;
     filter: brightness(2);
-    height: 70%;
 }
 
-.community-img {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+#community-img-container .img img{
+    height: 100%;
+}
+
+
+#community-img-container p {
+    text-align: center;
+    padding: 0 0.5em;
 }
 
 
@@ -561,6 +644,7 @@ h4::after{
     z-index: 3;
     position: absolute;
     padding: 0;
+    
 }
 
 #newsletter p, #newsletter-form {
@@ -570,10 +654,9 @@ h4::after{
 
 #newsletter-form {
     height: 10%;
-    width: 80%;
+    width: 70%;
     padding: 0;
     display: inline;
-    
 }
 
 #newsletter p{
@@ -582,13 +665,13 @@ h4::after{
 }
 
 #newsletter-form input{
-   height: 4vh;
-   width: 70%;
+   height: 2vh;
+   width: 60%;
    font-family: "Poppins";
 }
 
 #newsletter-form input, button {
-    padding: 0.8em;
+    padding: 1.1em;
  }
 
 #newsletter-form input:focus{
@@ -605,14 +688,12 @@ h4::after{
 
 
 #newsletter-testo{
-
-    padding: 2em 2em ;
+    padding: 2em 4em ;
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    justify-content: space-between;
     align-items: center;
-    margin: auto;
-    width: 80%;
+    width: 100%;
 }
 
 
@@ -620,6 +701,7 @@ footer {
     margin-top: 15vw;
     background-color:rgb(76, 102, 79);
     padding: 5em;
+    font-size: 1vw;
 }
 
 #footer-sections{
@@ -639,15 +721,36 @@ footer {
 .footer-section li {
     list-style-type: none;
     padding: 0.5em 0;
+    position: relative;
+    width: max-content;
+    cursor: pointer;
+}
+
+.footer-section .li::after {
+    content: "";
+    width: 0%;
+    height: 1px;
+    background-color: white;
+    position: absolute;
+    bottom: 2px;
+    left: 0;
+    transition: 0.5s ease-in-out;
+}
+
+.footer-section .li:hover::after {
+    width: 100%;
 }
 
 .footer-section ul{
     text-align: left;
     padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 #social-container {
-    width: 80%;
+    width: 60%;
     display: flex;
     flex-direction: row;
     gap: 2px;
@@ -655,7 +758,7 @@ footer {
 
 .social img {
     filter: brightness(1);
-    height: 85%;
+    height: 50%;
     object-fit: contain;
     transform: translateY(2px);
 
@@ -663,14 +766,14 @@ footer {
 
 .email img {
     filter: brightness(1);
-    height: 110% !important;
+    height: 70%;
     width: auto;
-    transform: translateY(-2px);
+    transform: translateY(-1px);
     object-position: center;
 }
 
 .social {
-    width: 40px;
-    height: 30px;
+    width: 4vw;
+    height: 3vw;
     padding-right: 1.4em;
 }
